--- a/index.html
+++ b/index.html
@@ -66,17 +66,16 @@
       <h2>Projects</h2>
 
       <div class="project">
-        <h3>Null – A Card-Based Strategy Game</h3>
-        <p>A Slay-the-Spire-style deckbuilding game focused on a character called Null, who nullifies buffs, debuffs, and enemies. Built in Unity using a turn manager and scriptable card system.</p>
-        <p><strong>My Role:</strong> Developed combat system, card execution logic, turn flow, and enemy behavior.</p>
-        <p><a href="https://github.com/Uncrustable125" target="_blank">View on GitHub</a></p>
+        <h3>Card-Based Strategy Game</h3>
+        <p>A Slay-the-Spire-style deckbuilding game focused on clearing waves of enemies. Built in Unity using a turn manager and scriptable card system.</p>
+        <p><a href="https://github.com/Uncrustable125/CardBattler" target="_blank">View on GitHub</a></p>
       </div>
 
       <div class="project">
         <h3>Name Recall Challenge</h3>
-        <p>A memory-based game where users match faces and names. Built for cognitive research-style gameplay using Unity and procedural UI generation.</p>
-        <p><strong>My Role:</strong> Created face-name pairing logic, encoding/recall sequence, and distractor mini-game system.</p>
-        <p><a href="https://github.com/Uncrustable125" target="_blank">View on GitHub</a></p>
+        <p>A memory-based game where users match faces and names. Built for cognitive research-style gameplay using Unity. </p>
+        <p>Played with an EEG monitor</p>
+        <p>Private project, Can send on request</p>
       </div>
 
       <div class="project">
@@ -87,7 +86,7 @@
 
     <section>
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:{{your_email_here}}">{{your_email_here}}</a></p>
+      <p>Email: <a href="mailto:{ryanrookis@gmail.com}">{{your_email_here}}</a></p>
       <p>GitHub: <a href="https://github.com/Uncrustable125" target="_blank">Uncrustable125</a></p>
     </section>
   </main>
