--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <section>
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:{ryanrookis@gmail.com}">{{your_email_here}}</a></p>
+	  <p>Email: <a href="mailto:ryanrookis@gmail.com">ryanrookis@gmail.com</a></p>
       <p>GitHub: <a href="https://github.com/Uncrustable125" target="_blank">Uncrustable125</a></p>
     </section>
   </main>
