--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
       <div class="project">
         <h3>Card-Based Strategy Game</h3>
         <p>A Slay-the-Spire-style deckbuilding game focused on clearing waves of enemies. Built in Unity using a turn manager and scriptable card system.</p>
-        <p><a href="https://github.com/Uncrustable125/CardBattler" target="_blank">View on GitHub</a></p>
+		<p>Features hand-drawn art</p>
+		<p><a href="https://github.com/Uncrustable125/CardBattler" target="_blank">View on GitHub</a></p>
       </div>
 
       <div class="project">
