--- a/index.html
+++ b/index.html
@@ -76,14 +76,16 @@
         <h3>Name Recall Challenge</h3>
         <p>A memory-based game where users match faces and names. Built for cognitive research-style gameplay using Unity. </p>
         <p>Played with an EEG monitor</p>
-        <p>Private project, Can send on request</p>
+        <p>Professional project, Can send on request</p>
       </div>
 
       <div class="project">
-        <h3>Coming Soon</h3>
-        <p>Another original Unity project is in development. Check back soon!</p>
+        <h3>Farm Game</h3>
+        <p>A farm game similiar to Stardew Valley or Harvest Moon. </p>
+        <p>Still a very basic game, but shows off some different systems.</p>
+        <p>This was my first real project in Unity and how I taught myself.</p>
+	    <p><a href="https://github.com/Uncrustable125/Farm-Game" target="_blank">View on GitHub</a></p>
       </div>
-    </section>
 
     <section>
       <h2>Contact</h2>
