--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <main>
     <section>
       <h2>Projects</h2>
-
+	  <h2>All projects were completly done by me</h2>
       <div class="project">
         <h3>Card-Based Strategy Game</h3>
         <p>A Slay-the-Spire-style deckbuilding game focused on clearing waves of enemies. Built in Unity using a turn manager and scriptable card system.</p>
@@ -76,7 +76,9 @@
         <h3>Name Recall Challenge</h3>
         <p>A memory-based game where users match faces and names. Built for cognitive research-style gameplay using Unity. </p>
         <p>Played with an EEG monitor</p>
-        <p>Professional project, Can send on request</p>
+        <p>This is a professional project for the NTL group's NeuroCoach</p>
+		<p><a href="https://ntlgroupinc.com/neurocoach/" target="_blank">Their HomePage</a></p>
+        <p>Can send on request</p>
       </div>
 
       <div class="project">
@@ -84,6 +86,7 @@
         <p>A farm game similiar to Stardew Valley or Harvest Moon. </p>
         <p>Still a very basic game, but shows off some different systems.</p>
         <p>This was my first real project in Unity and how I taught myself.</p>
+        <p>Most of this art is not my own, but some is.</p>
 	    <p><a href="https://github.com/Uncrustable125/Farm-Game" target="_blank">View on GitHub</a></p>
       </div>
 
