--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         <p>A memory-based game where users match faces and names. Built for cognitive research-style gameplay using Unity. </p>
         <p>Played with an EEG monitor</p>
         <p>This is a professional project for the NTL group's NeuroCoach</p>
-		<p><a href="https://ntlgroupinc.com/neurocoach/" target="_blank">Their HomePage</a></p>
-        <p>Can send on request</p>
+		<p><a href="https://ntlgroupinc.com/neurocoach/" target="_blank">NTL.NeuroCoach HomePage</a></p>
+        <p>Can send project on request</p>
       </div>
 
       <div class="project">
