--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
 
       <div class="project">
         <h3>Farm Game</h3>
-		<iframe width="600"
-        height="338"
-        src="https://www.youtube.com/embed/UWodgMyIYIs?autoplay=1&mute=1&loop=1&playlist=UWodgMyIYIs"
-        frameborder="0"
-        allow="autoplay; encrypted-media"
-        allowfullscreen>
-		</iframe>
         <p>A farm game similiar to Stardew Valley or Harvest Moon. </p>
         <p>Still a very basic game, but shows off some different systems.</p>
         <p>This was my first real project in Unity and how I taught myself.</p>
         <p>Most of this art is not my own, but some is.</p>
+	    <iframe width="600"
+        height="338"
+        src="https://www.youtube.com/embed/UWodgMyIYIs?autoplay=1&mute=1&loop=1&playlist=UWodgMyIYIs"
+        frameborder="0"
+        allow="encrypted-media"
+        allowfullscreen>
+		</iframe>
 	    <p><a href="https://github.com/Uncrustable125/Farm-Game" target="_blank">View on GitHub</a></p>
       </div>
 
