--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
         <h3>Card-Based Strategy Game</h3>
         <p>A Slay-the-Spire-style deckbuilding game focused on clearing waves of enemies. Built in Unity using a turn manager and scriptable card system.</p>
 		<p>Features hand-drawn art</p>
+		<iframe width="600"
+        height="338"
+        src="https://www.youtube.com/embed/lk1gdjNjQ88?mute=0&loop=1&playlist=lk1gdjNjQ88"
+        frameborder="0"
+        allow="encrypted-media"
+        allowfullscreen>
+		</iframe>
 		<p><a href="https://github.com/Uncrustable125/CardBattler" target="_blank">View on GitHub</a></p>
       </div>
 
@@ -77,6 +84,13 @@
         <p>A memory-based game where users match faces and names. Built for cognitive research-style gameplay using Unity. </p>
         <p>Played with an EEG monitor</p>
         <p>This is a professional project for the NTL group's NeuroCoach</p>
+		<iframe width="600"
+        height="338"
+        src="https://www.youtube.com/embed/_eDWl9PTm7k?mute=0&loop=1&playlist=_eDWl9PTm7k"
+        frameborder="0"
+        allow="encrypted-media"
+        allowfullscreen>
+		</iframe>
 		<p><a href="https://ntlgroupinc.com/neurocoach/" target="_blank">NTL.NeuroCoach HomePage</a></p>
         <p>Can send project on request</p>
       </div>
@@ -95,6 +109,19 @@
         allowfullscreen>
 		</iframe>
 	    <p><a href="https://github.com/Uncrustable125/Farm-Game" target="_blank">View on GitHub</a></p>
+      </div>
+	  
+      <div class="project">
+        <h3>Unwinnable Tic-Tac-Toe</h3>
+        <p>You cant win. </p>
+		<iframe width="600"
+        height="338"
+        src="https://www.youtube.com/embed/2hGbSUb_NqI?mute=0&loop=1&playlist=2hGbSUb_NqI"
+        frameborder="0"
+        allow="encrypted-media"
+        allowfullscreen>
+		</iframe>
+	    <p><a href="https://github.com/Uncrustable125/Tic-Tac-Toe" target="_blank">View on GitHub</a></p>
       </div>
 
     <section>
