--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
         <p>Still a very basic game, but shows off some different systems.</p>
         <p>This was my first real project in Unity and how I taught myself.</p>
         <p>Most of this art is not my own, but some is.</p>
-	    <iframe width="600"
+		<iframe width="600"
         height="338"
-        src="https://www.youtube.com/embed/UWodgMyIYIs?autoplay=1&mute=1&loop=1&playlist=UWodgMyIYIs"
+        src="https://www.youtube.com/embed/UWodgMyIYIs?mute=0&loop=1&playlist=UWodgMyIYIs"
         frameborder="0"
         allow="encrypted-media"
         allowfullscreen>
