--- a/index.html
+++ b/index.html
@@ -63,7 +63,21 @@
   </header>
   <main>
     <section>
-      <h2>Projects</h2>
+      <h2>About me</h2>
+  <h2>About Me</h2>
+  <p>
+    I’m a naturally tech-minded person who loves creating, connecting, and exploring. 
+    I’m passionate about making the kinds of games I grew up playing, and I’m driven 
+    to build experiences that inspire and bring people together. 
+  </p>
+  <p>
+    Outside of development, I’m deeply spiritual and curious about the world — I want to 
+    travel, learn from different cultures, and meet people from all walks of life. 
+    My dream is to work remotely, create meaningful projects, and live fully in the purpose 
+    God made me for.
+  </p>
+</section>
+	  <h2>Projects</h2>
 	  <h2>All projects were completly done by me</h2>
       <div class="project">
         <h3>Card-Based Strategy Game</h3>
