--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     Outside of development, I’m deeply spiritual and curious about the world — I want to 
     travel, learn from different cultures, and meet people from all walks of life. 
     My dream is to work remotely, create meaningful projects, and live fully in the purpose 
-    God made me for.
+    I was made for.
   </p>
 </section>
 	  <h2>Projects</h2>
