--- a/index.html
+++ b/index.html
@@ -3,19 +3,39 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ryan R – Portfolio</title>
+
+  <!-- #5 SEO & Metadata -->
+  <title>Ryan R — Game Developer & Programmer</title>
+  <meta name="description" content="Portfolio of Ryan R — Unity developer and programmer. Projects include a card-based strategy game, Name Recall Challenge (EEG), a farm sim, and an unwinnable tic-tac-toe. Contact: ryanrookis@gmail.com." />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Ryan R — Game Developer & Programmer" />
+  <meta property="og:description" content="Unity projects: card battler, Name Recall Challenge (EEG), farm game, and more." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://uncrustable125.github.io/" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Ryan R — Game Developer & Programmer" />
+  <meta name="twitter:description" content="Unity projects: card battler, Name Recall Challenge (EEG), farm game, and more." />
+
+  <link rel="canonical" href="https://uncrustable125.github.io/" />
+
   <style>
+    /* Base */
     body {
-      font-family: sans-serif;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
       margin: 0;
       padding: 0;
       background: #f9f9f9;
       color: #333;
+      line-height: 1.5;
     }
     header {
       background: #222;
       color: white;
-      padding: 2rem;
+      padding: 2rem 1rem;
       text-align: center;
     }
     header h1 {
@@ -28,7 +48,7 @@
       color: #bbb;
     }
     main {
-      padding: 2rem;
+      padding: 2rem 1rem;
       max-width: 800px;
       margin: auto;
     }
@@ -44,15 +64,44 @@
       padding-left: 1rem;
       margin-bottom: 1.5rem;
     }
+    a {
+      color: #0066cc;
+      text-decoration: none;
+    }
     .footer {
       text-align: center;
       font-size: 0.9rem;
       color: #888;
       padding: 2rem 1rem;
     }
-    a {
-      color: #0066cc;
-      text-decoration: none;
+
+    /* #2 Responsive embeds (16:9 aspect, scales on mobile) */
+    .embed {
+      position: relative;
+      width: 100%;
+      max-width: 800px;
+      margin: 0.75rem 0 0.5rem 0;
+      /* 16:9 ratio */
+      aspect-ratio: 16 / 9;
+      background: #000; /* avoids white flash before load */
+      overflow: hidden;
+      border-radius: 8px;
+    }
+    .embed iframe,
+    .embed video {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      border: 0;
+      display: block;
+    }
+
+    /* Small screens tweaks */
+    @media (max-width: 600px) {
+      header h1 { font-size: 2rem; }
+      header p { font-size: 1rem; }
+      h2 { font-size: 1.25rem; }
     }
   </style>
 </head>
@@ -61,89 +110,93 @@
     <h1>Ryan R</h1>
     <p>Programmer and Engineer</p>
   </header>
+
   <main>
     <section>
       <h2>About me</h2>
-  <h2>About Me</h2>
-  <p>
-    I’m a naturally tech-minded person who loves creating, connecting, and exploring. 
-    I’m passionate about making the kinds of games I grew up playing, and I’m driven 
-    to build experiences that inspire and bring people together. 
-  </p>
-  <p>
-    Outside of development, I’m deeply spiritual and curious about the world — I want to 
-    travel, learn from different cultures, and meet people from all walks of life. 
-    My dream is to work remotely, create meaningful projects, and live fully in the purpose 
-    I was made for.
-  </p>
-</section>
-	  <h2>Projects</h2>
-	  <h2>All projects were completly done by me</h2>
-      <div class="project">
-        <h3>Card-Based Strategy Game</h3>
-        <p>A Slay-the-Spire-style deckbuilding game focused on clearing waves of enemies. Built in Unity using a turn manager and scriptable card system.</p>
-		<p>Features hand-drawn art</p>
-		<iframe width="600"
-        height="338"
-        src="https://www.youtube.com/embed/lk1gdjNjQ88?mute=0&loop=1&playlist=lk1gdjNjQ88"
-        frameborder="0"
-        allow="encrypted-media"
-        allowfullscreen>
-		</iframe>
-		<p><a href="https://github.com/Uncrustable125/CardBattler" target="_blank">View on GitHub</a></p>
-      </div>
+      <h2>About Me</h2>
+      <p>
+        I’m a naturally tech-minded person who loves creating, connecting, and exploring. 
+        I’m passionate about making the kinds of games I grew up playing, and I’m driven 
+        to build experiences that inspire and bring people together. 
+      </p>
+      <p>
+        Outside of development, I’m deeply spiritual and curious about the world — I want to 
+        travel, learn from different cultures, and meet people from all walks of life. 
+        My dream is to work remotely, create meaningful projects, and live fully in the purpose 
+        I was made for.
+      </p>
+    </section>
 
-      <div class="project">
-        <h3>Name Recall Challenge</h3>
-        <p>A memory-based game where users match faces and names. Built for cognitive research-style gameplay using Unity. </p>
-        <p>Played with an EEG monitor</p>
-        <p>This is a professional project for the NTL group's NeuroCoach</p>
-		<iframe width="600"
-        height="338"
-        src="https://www.youtube.com/embed/_eDWl9PTm7k?mute=0&loop=1&playlist=_eDWl9PTm7k"
-        frameborder="0"
-        allow="encrypted-media"
-        allowfullscreen>
-		</iframe>
-		<p><a href="https://ntlgroupinc.com/neurocoach/" target="_blank">NTL.NeuroCoach HomePage</a></p>
-        <p>Can send project on request</p>
-      </div>
+    <h2>Projects</h2>
+    <h2>All projects were completly done by me</h2>
 
-      <div class="project">
-        <h3>Farm Game</h3>
-        <p>A farm game similiar to Stardew Valley or Harvest Moon. </p>
-        <p>Still a very basic game, but shows off some different systems.</p>
-        <p>This was my first real project in Unity and how I taught myself.</p>
-        <p>Most of this art is not my own, but some is.</p>
-		<iframe width="600"
-        height="338"
-        src="https://www.youtube.com/embed/UWodgMyIYIs?mute=0&loop=1&playlist=UWodgMyIYIs"
-        frameborder="0"
-        allow="encrypted-media"
-        allowfullscreen>
-		</iframe>
-	    <p><a href="https://github.com/Uncrustable125/Farm-Game" target="_blank">View on GitHub</a></p>
+    <div class="project">
+      <h3>Card-Based Strategy Game</h3>
+      <p>A Slay-the-Spire-style deckbuilding game focused on clearing waves of enemies. Built in Unity using a turn manager and scriptable card system.</p>
+      <p>Features hand-drawn art</p>
+      <div class="embed">
+        <iframe
+          src="https://www.youtube.com/embed/lk1gdjNjQ88?mute=0&loop=1&playlist=lk1gdjNjQ88"
+          allow="encrypted-media"
+          allowfullscreen>
+        </iframe>
       </div>
-	  
-      <div class="project">
-        <h3>Unwinnable Tic-Tac-Toe</h3>
-        <p>You cant win. </p>
-		<iframe width="600"
-        height="338"
-        src="https://www.youtube.com/embed/2hGbSUb_NqI?mute=0&loop=1&playlist=2hGbSUb_NqI"
-        frameborder="0"
-        allow="encrypted-media"
-        allowfullscreen>
-		</iframe>
-	    <p><a href="https://github.com/Uncrustable125/Tic-Tac-Toe" target="_blank">View on GitHub</a></p>
+      <p><a href="https://github.com/Uncrustable125/CardBattler" target="_blank">View on GitHub</a></p>
+    </div>
+
+    <div class="project">
+      <h3>Name Recall Challenge</h3>
+      <p>A memory-based game where users match faces and names. Built for cognitive research-style gameplay using Unity.</p>
+      <p>Played with an EEG monitor</p>
+      <p>This is a professional project for the NTL group's NeuroCoach</p>
+      <div class="embed">
+        <iframe
+          src="https://www.youtube.com/embed/_eDWl9PTm7k?mute=0&loop=1&playlist=_eDWl9PTm7k"
+          allow="encrypted-media"
+          allowfullscreen>
+        </iframe>
       </div>
+      <p><a href="https://ntlgroupinc.com/neurocoach/" target="_blank">NTL.NeuroCoach HomePage</a></p>
+      <p>Can send project on request</p>
+    </div>
+
+    <div class="project">
+      <h3>Farm Game</h3>
+      <p>A farm game similiar to Stardew Valley or Harvest Moon.</p>
+      <p>Still a very basic game, but shows off some different systems.</p>
+      <p>This was my first real project in Unity and how I taught myself.</p>
+      <p>Most of this art is not my own, but some is.</p>
+      <div class="embed">
+        <iframe
+          src="https://www.youtube.com/embed/UWodgMyIYIs?mute=0&loop=1&playlist=UWodgMyIYIs"
+          allow="encrypted-media"
+          allowfullscreen>
+        </iframe>
+      </div>
+      <p><a href="https://github.com/Uncrustable125/Farm-Game" target="_blank">View on GitHub</a></p>
+    </div>
+
+    <div class="project">
+      <h3>Unwinnable Tic-Tac-Toe</h3>
+      <p>You cant win.</p>
+      <div class="embed">
+        <iframe
+          src="https://www.youtube.com/embed/2hGbSUb_NqI?mute=0&loop=1&playlist=2hGbSUb_NqI"
+          allow="encrypted-media"
+          allowfullscreen>
+        </iframe>
+      </div>
+      <p><a href="https://github.com/Uncrustable125/Tic-Tac-Toe" target="_blank">View on GitHub</a></p>
+    </div>
 
     <section>
       <h2>Contact</h2>
-	  <p>Email: <a href="mailto:ryanrookis@gmail.com">ryanrookis@gmail.com</a></p>
+      <p>Email: <a href="mailto:ryanrookis@gmail.com">ryanrookis@gmail.com</a></p>
       <p>GitHub: <a href="https://github.com/Uncrustable125" target="_blank">Uncrustable125</a></p>
     </section>
   </main>
+
   <footer class="footer">
     &copy; 2025 Ryan R
   </footer>
