--- a/index.html
+++ b/index.html
@@ -190,6 +190,22 @@
       <p><a href="https://github.com/Uncrustable125/Tic-Tac-Toe" target="_blank">View on GitHub</a></p>
     </div>
 
+<section>
+  <h2>Other Capabilities</h2>
+  <p>
+    In addition to my game development work, I have a broad skill set that allows me 
+    to tackle a variety of projects from software to hardware to life skills.
+  </p>
+  <ul>
+    <li><strong>Programming:</strong> C, C#, C++, Python</li>
+    <li><strong>Engineering Tools:</strong> SolidWorks, Unity</li>
+    <li><strong>Hardware Experience:</strong> Microcontrollers, soldering, 3D printing, laser cutting</li>    
+	<li><strong>Life Skills:</strong> Recovery and life coach 10 years</li>
+
+	
+  </ul>
+</section>
+
     <section>
       <h2>Contact</h2>
       <p>Email: <a href="mailto:ryanrookis@gmail.com">ryanrookis@gmail.com</a></p>
