--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <li><strong>Programming:</strong> C, C#, C++, Python</li>
     <li><strong>Engineering Tools:</strong> SolidWorks, Unity</li>
     <li><strong>Hardware Experience:</strong> Microcontrollers, soldering, 3D printing, laser cutting</li>    
-	<li><strong>Life Skills:</strong> Recovery and life coach 10 years</li>
+	<li><strong>Life Skills:</strong> Addiction Recovery and Life Coach - 10 years</li>
 
 	
   </ul>
