--- a/index.html
+++ b/index.html
@@ -114,7 +114,6 @@
   <main>
     <section>
       <h2>About me</h2>
-      <h2>About Me</h2>
       <p>
         I’m a naturally tech-minded person who loves creating, connecting, and exploring. 
         I’m passionate about making the kinds of games I grew up playing, and I’m driven 
@@ -125,6 +124,16 @@
         travel, learn from different cultures, and meet people from all walks of life. 
         My dream is to work remotely, create meaningful projects, and live fully in the purpose 
         I was made for.
+      </p>
+	        <h3>Some of the games I love</h3>
+      <p>
+       Halo
+	   Dishonered
+	   Left 4 Dead
+	   Hollow Knight
+	   Age of Mythology
+	   Bioshock Infinite
+	   Mass Efect
       </p>
     </section>
 
