--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <p>
         Outside of development, I’m deeply spiritual and curious about the world — I want to 
         travel, learn from different cultures, and meet people from all walks of life. 
-        My dream is to create meaningful projects, be able to travel, and live fully in the purpose 
+        My dream is to create meaningful projects, travel all over the world, and live fully in the purpose 
         I was made for.
       </p>
 	        <h3>Some of the games I love</h3>
