--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     </div>
 
 <section>
-  <h2>Other Capabilities</h2>
+  <h2>Other Skills</h2>
   <p>
     In addition to my game development work, I have a broad skill set that allows me 
     to tackle a variety of projects from software to hardware to life skills.
